--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
           <h2>JE 프렌즈 인형</h2>
           <div><span class="price-text">10,000</span> 원~</div>
           <h3>상품 옵션</h3>
-          <div class="options">
-            <select style="width: 80%">
-              <option>라이언</option>
-            </select>
+          <div class="options-wrapper">
+            <div class="options">
+              <select style="width: 80%">
+                <option>라이언</option>
+              </select>
+            </div>
+            <div class="sub-options">
+              <select style="width: 80%"></select>
+            </div>
           </div>
           <h3>선택된 상품</h3>
           <div class="selected-options"></div>
